--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,18 @@
         app:layout_constraintVertical_bias="0.196" />
 
     <Button
+        android:id="@+id/buttonGoToHomeArtist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="240dp"
+        android:text="Artist Home"
+        app:layout_constraintBottom_toTopOf="@+id/nav_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_activity_main"
+        app:layout_constraintVertical_bias="0.589" />
+
+    <Button
         android:id="@+id/buttonGoToChatting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
