--- a/app/src/main/res/layout/homepageartists.xml
+++ b/app/src/main/res/layout/homepageartists.xml
@@ -105,10 +105,11 @@
 
                 <!-- First CardView -->
                 <androidx.cardview.widget.CardView
-                    android:layout_width="378dp"
-                    android:layout_height="180dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="190dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
                     app:cardCornerRadius="16dp"
                     app:cardBackgroundColor="#FFFFFF">
 
@@ -119,10 +120,10 @@
 
                         <ImageView
                             android:id="@+id/iconCompanyHomeArtistOne"
-                            android:layout_width="110dp"
+                            android:layout_width="100dp"
                             android:layout_height="100dp"
                             android:layout_marginStart="12dp"
-                            android:layout_marginTop="2dp"
+                            android:layout_marginTop="16dp"
                             android:src="@drawable/barmashlogo" />
 
                         <LinearLayout
@@ -170,7 +171,7 @@
                             android:layout_width="90dp"
                             android:layout_height="27dp"
                             android:layout_marginStart="12dp"
-                            android:layout_marginTop="140dp"
+                            android:layout_marginTop="152dp"
                             android:textSize="10sp"
                             android:textColor="#ffffff"
                             android:textStyle="bold"
@@ -183,10 +184,11 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="378dp"
+                    android:layout_width="match_parent"
                     android:layout_height="180dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
                     app:cardCornerRadius="16dp"
                     app:cardBackgroundColor="#FFFFFF">
 
@@ -201,7 +203,7 @@
                             android:layout_height="100dp"
                             android:layout_alignParentStart="true"
                             android:layout_marginStart="6dp"
-                            android:layout_marginTop="2dp"
+                            android:layout_marginTop="5dp"
                             android:src="@drawable/cocktail" />
 
                         <LinearLayout
@@ -261,10 +263,11 @@
 
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
-                    android:layout_width="378dp"
-                    android:layout_height="180dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="190dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
                     app:cardCornerRadius="16dp"
                     app:cardBackgroundColor="#FFFFFF">
 
@@ -278,7 +281,7 @@
                             android:layout_width="110dp"
                             android:layout_height="100dp"
                             android:layout_marginStart="12dp"
-                            android:layout_marginTop="2dp"
+                            android:layout_marginTop="16dp"
                             android:src="@drawable/barmashlogo" />
 
                         <LinearLayout
@@ -325,7 +328,7 @@
                             android:layout_width="90dp"
                             android:layout_height="27dp"
                             android:layout_marginStart="12dp"
-                            android:layout_marginTop="140dp"
+                            android:layout_marginTop="152dp"
                             android:textSize="10sp"
                             android:textColor="#ffffff"
                             android:textStyle="bold"
