--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,11 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_item1"
+        android:id="@+id/nav_to_chat"
         android:icon="@drawable/chat_circle_svgrepo_com"
         android:title=""/>
 
     <item
-        android:id="@+id/navigation_item2"
+        android:id="@+id/nav_to_location"
         android:icon="@drawable/location_star_svgrepo_com"
         android:title="" />
 
