--- a/app/src/main/res/layout/message_list_activity.xml
+++ b/app/src/main/res/layout/message_list_activity.xml
@@ -47,7 +47,7 @@
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#e0e0e0"
+        android:background="#93BADD"
         app:layout_constraintBottom_toTopOf="@+id/layout_gchat_chatbox" />
 
     <!-- send message balk -->
@@ -55,6 +55,7 @@
         android:id="@+id/layout_gchat_chatbox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="55dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -83,5 +84,14 @@
 
     </RelativeLayout>
 
-
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:backgroundTint="#93BADD"
+        app:itemIconSize="38dp"
+        app:itemIconTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/navigation_menu" />
 </androidx.constraintlayout.widget.ConstraintLayout>
