--- a/app/src/main/res/drawable/like_button.xml
+++ b/app/src/main/res/drawable/like_button.xml
@@ -1,9 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:width="64dp"
     android:height="64dp"
     android:viewportWidth="64"
-    android:viewportHeight="64">
+    android:viewportHeight="64"
+    tools:ignore="ExtraText">
     <path
-        android:fillColor="#ffffffff" <!-- Transparent color -->
+        android:fillColor="#00ffffff"
         android:pathData="M32,60.9c-8.1,0 -19.6,-5.8 -30.2,-15.8C4,31.3 -2.1,15.9 4.3,9.1c0.3,-0.3 0.7,-0.6 1.1,-0.8l8.1,-4.6c2.1,-1.2 4.7,-0.6 6.1,1.4l5.9,8.4c0.7,1 1,2.2 0.7,3.4C26,18 25.3,19 24.3,19.7L20.8,22c2.7,3.9 10,13.6 21.6,20.5c0.1,0.1 0.2,0 0.2,0l2.5,-3.4c1.4,-1.9 4.1,-2.4 6.2,-1.1l8.8,5.6c2.1,1.3 2.7,4 1.4,6.1l-4.8,7.7c-0.3,0.4 -0.6,0.8 -0.9,1.1C54,60.1 51.5,60.9 48.6,60.9zM15.8,7.6C15.8,7.6 15.7,7.6 15.8,7.6l-8.2,4.6c-3.8,4.1 0.9,17.2 14,29.6c13.3,12.6 27,17.1 31.4,13.3l0,0c0,0 0,0 0,0l4.8,-7.7l-8.8,-5.6c-0.1,0 -0.2,0 -0.2,0l-2.5,3.4c-1.4,1.9 -4.1,2.4 -6.1,1.2c-12.5,-7.5 -20.3,-17.9 -23.1,-22c-0.7,-1 -0.9,-2.2 -0.7,-3.3c0.2,-1.2 0.9,-2.2 1.9,-2.8l3.5,-2.3l-5.8,-8.3C15.9,7.7 15.8,7.6 15.8,7.6z"/>
 </vector>
