--- a/app/src/main/res/layout/profilepaginafwb.xml
+++ b/app/src/main/res/layout/profilepaginafwb.xml
@@ -45,7 +45,7 @@
                 android:textStyle="bold"                />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/linkRegister"
                 android:layout_width="match_parent"
                 android:layout_height="15dp"
                 android:layout_marginTop="16dp"
@@ -204,7 +204,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/rounded_edittext"
-                        android:hint="@string/edit_text_hint4"
                         android:padding="1dp" />
 
 
