--- a/app/src/main/res/layout/registreren_artiest.xml
+++ b/app/src/main/res/layout/registreren_artiest.xml
@@ -54,7 +54,7 @@
                 android:textStyle="bold"                />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/linkRegister"
                 android:layout_width="match_parent"
                 android:layout_height="15dp"
                 android:layout_marginTop="16dp"
