--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -5,17 +5,17 @@
         android:title=""/>
 
     <item
-        android:id="@+id/nav_to_location"
+        android:id="@+id/nav_to_venues"
         android:icon="@drawable/location_star_svgrepo_com"
         android:title="" />
 
     <item
-        android:id="@+id/navigation_item3"
+        android:id="@+id/nav_to_discovery"
         android:icon="@drawable/compass_svgrepo_com"
         android:title="" />
 
     <item
-        android:id="@+id/navigation_item4"
+        android:id="@+id/nav_to_profile"
         android:icon="@drawable/profile_circle_svgrepo_com"
         android:title="" />
 
