--- a/app/src/main/res/layout/discovery2.xml
+++ b/app/src/main/res/layout/discovery2.xml
@@ -5,7 +5,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/band2"
+        android:src="@drawable/band1"
         android:scaleType="centerCrop" />
 
     <ImageView
@@ -28,18 +28,17 @@
             android:layout_gravity="center">
 
             <ImageView
-                android:id="@+id/goToProfile"
-                android:layout_width="56dp"
+                android:layout_width="60dp"
                 android:layout_height="56dp"
-                android:src="@drawable/profile_pifcture2"
                 android:layout_marginBottom="16dp"
-                android:padding="8dp" />
+                android:padding="8dp"
+                android:src="@drawable/profile_picture1" />
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Joe Cocker"
+                android:text="Helen Hewett"
                 android:textColor="#FFFFFF"
                 android:background="#80000000"
                 android:textSize="10sp"
@@ -58,7 +57,6 @@
         android:paddingBottom="128dp">
 
         <ImageView
-            android:id="@+id/giveItAStar"
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:src="@drawable/star_svgrepo_com"
@@ -74,7 +72,6 @@
         android:paddingBottom="128dp">
 
         <ImageView
-            android:id="@+id/goFavorite"
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:src="@drawable/heart_svgrepo_com"
@@ -82,6 +79,7 @@
     </FrameLayout>
 
     <ImageView
+        android:id="@+id/goNextDiscovery"
         android:layout_width="72dp"
         android:layout_height="72dp"
         android:src="@drawable/next_svgrepo_com"
