--- a/app/src/main/res/layout/registreren_artiest.xml
+++ b/app/src/main/res/layout/registreren_artiest.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="Mainactivity">
+    tools:context=".MainActivity">
 
     <FrameLayout
         android:id="@+id/container"
@@ -16,13 +16,16 @@
     </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/navigation"
+        android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="0dp"
         app:menu="@menu/navigation_menu"
-        android:background="#93BADD"/>
+        app:itemIconSize="38dp"
+        app:itemIconTint="@color/white"
+        app:backgroundTint="#93BADD"
+        />
+
 
     <ScrollView
         android:layout_width="match_parent"
