Did a lot, added new files and made some more kotlin code to connect everything the right way

--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -1,6 +1,7 @@
 <!-- item_chat.xml -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/GoToChatting"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp">
