--- a/app/src/main/res/layout/loginpagina.xml
+++ b/app/src/main/res/layout/loginpagina.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.104"
         tools:ignore="MissingConstraints"
-        tools:srcCompat="@drawable/logogighub" />
+        android:src="@drawable/logogighub" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
