--- a/app/src/main/res/layout/discovery.xml
+++ b/app/src/main/res/layout/discovery.xml
@@ -28,7 +28,6 @@
             android:layout_gravity="center">
 
             <ImageView
-                android:id="@+id/goToProfile"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
                 android:src="@drawable/profile_pifcture2"
@@ -58,7 +57,6 @@
         android:paddingBottom="128dp">
 
         <ImageView
-            android:id="@+id/giveItAStar"
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:src="@drawable/star_svgrepo_com"
@@ -74,7 +72,6 @@
         android:paddingBottom="128dp">
 
         <ImageView
-            android:id="@+id/goFavorite"
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:src="@drawable/heart_svgrepo_com"
@@ -82,6 +79,7 @@
     </FrameLayout>
 
     <ImageView
+        android:id="@+id/goNextDiscovery"
         android:layout_width="72dp"
         android:layout_height="72dp"
         android:src="@drawable/next_svgrepo_com"
