--- a/app/src/main/res/layout/discovery2.xml
+++ b/app/src/main/res/layout/discovery2.xml
@@ -28,6 +28,7 @@
             android:layout_gravity="center">
 
             <ImageView
+                android:id="@+id/goToProfile"
                 android:layout_width="60dp"
                 android:layout_height="56dp"
                 android:layout_marginBottom="16dp"
@@ -57,6 +58,7 @@
         android:paddingBottom="128dp">
 
         <ImageView
+            android:id="@+id/goFavorite"
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:src="@drawable/star_svgrepo_com"
@@ -72,6 +74,7 @@
         android:paddingBottom="128dp">
 
         <ImageView
+            android:id="@+id/giveItAStar"
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:src="@drawable/heart_svgrepo_com"
@@ -79,7 +82,6 @@
     </FrameLayout>
 
     <ImageView
-        android:id="@+id/goNextDiscovery"
         android:layout_width="72dp"
         android:layout_height="72dp"
         android:src="@drawable/next_svgrepo_com"
