--- a/app/src/main/res/layout/registreerpagina.xml
+++ b/app/src/main/res/layout/registreerpagina.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.058"
-        tools:srcCompat="@drawable/logogighub" />
+        android:src="@drawable/logogighub" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView3"
@@ -25,7 +25,8 @@
         app:cardBackgroundColor="@android:color/white"
         app:cardCornerRadius="16dp"
         app:cardElevation="2dp"
-        tools:layout_editor_absoluteX="16dp">
+        tools:layout_editor_absoluteX="16dp"
+        tools:ignore="MissingConstraints">
 
     </androidx.cardview.widget.CardView>
 
@@ -36,10 +37,13 @@
         android:background="@drawable/rounded_edittext"
         android:hint="Volledige naam.."
         android:padding="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="253dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.386"
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/editTextUsername"
@@ -48,10 +52,12 @@
         android:background="@drawable/rounded_edittext"
         android:hint="Gebruikersnaam.."
         android:padding="10dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/editTextFullName"
-        tools:layout_editor_absoluteX="75dp"
-        tools:layout_editor_absoluteY="380dp"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/cardView3"
+        app:layout_constraintVertical_bias="0.472"
         tools:ignore="MissingConstraints" />
 
     <EditText
@@ -63,10 +69,10 @@
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.465"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/cardView3"
-        app:layout_constraintVertical_bias="0.557"
+        app:layout_constraintVertical_bias="0.55"
         tools:ignore="MissingConstraints" />
 
     <EditText
@@ -78,10 +84,10 @@
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.465"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/cardView3"
-        app:layout_constraintVertical_bias="0.671"
+        app:layout_constraintVertical_bias="0.658"
         tools:ignore="MissingConstraints" />
 
     <EditText
@@ -93,10 +99,10 @@
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.465"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.761"
+        app:layout_constraintVertical_bias="0.745"
         tools:ignore="MissingConstraints" />
 
     <EditText
@@ -109,26 +115,26 @@
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.465"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.818"
+        app:layout_constraintVertical_bias="0.812"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/mainTextView"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_width="148dp"
+        android:layout_height="24dp"
         android:text="Aanmelden als:"
         android:textColor="#333377"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.592"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.879"
+        app:layout_constraintVertical_bias="0.895"
         tools:ignore="MissingConstraints" />
 
     <LinearLayout
@@ -143,6 +149,7 @@
         tools:layout_editor_absoluteX="33dp">
 
         <Button
+            android:id="@+id/btn_artiest_account_create"
             android:layout_width="140dp"
             android:layout_height="48dp"
             android:layout_gravity="start"
